fixed some layout issue on desktop
i had to compromlise a bit on the padding and margin for popular card body, it looks a bit off from the original design but it's more consistent across multiple resolutions

--- a/styles/css/modules/layout.css
+++ b/styles/css/modules/layout.css
@@ -165,7 +165,7 @@ footer {
 	.popular-card .card-upper-body {
 		display: flex;
 		flex-direction: column;
-		justify-content: flex-start;
+		justify-content: space-between;
 	}
 	.masonry-wrap {
 		flex-direction: column;
