--- a/styles/css/modules/layoutSizing.css
+++ b/styles/css/modules/layoutSizing.css
@@ -251,7 +251,11 @@ footer {
 		height: 100%;
 		max-height: none;
 	}
-	
+	.popular-card .card-body .card-upper-body {
+		
+		height: 50%;
+		max-height: 5rem;
+	}
 
 	.masonry-wrap {
 		max-height: 30rem;
