--- a/styles/css/modules/reset.css
+++ b/styles/css/modules/reset.css
@@ -47,16 +47,12 @@ ol[class] {
   list-style: none;
 }
 
-/* A elements that don't have a class get default styles */
-a:not([class]) {
-  text-decoration-skip-ink: auto;
-}
 
 /* Make images easier to work with */
-img {
+/* img {
   max-width: 100%;
   display: block;
-}
+} */
 
 /* Natural flow and rhythm in articles by default
 article > * + * {
@@ -69,14 +65,4 @@ button,
 textarea,
 select {
   font: inherit;
-}
-
-/* Remove all animations and transitions for people that prefer not to see them */
-@media (prefers-reduced-motion: reduce) {
-  * {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
-    scroll-behavior: auto !important;
-  }
 }
